--- a/styles/components/_Herosection.scss
+++ b/styles/components/_Herosection.scss
@@ -76,7 +76,8 @@
       font-size: 1rem;
       font-family: $font-2;
       color: #4f4f4f;
-      width: 353px;
+      width: fit-content;
+      padding-right: 15px;
     }
   }
   button {
