--- a/styles/components/_Layout.scss
+++ b/styles/components/_Layout.scss
@@ -1,6 +1,7 @@
 .children {
   // margin: 20px;
   margin-top: 30px;
+  width: 100%;
   // display: flex;
   // flex-direction: row;
   // justify-content: center;
