--- a/styles/components/_Media.scss
+++ b/styles/components/_Media.scss
@@ -1,7 +1,8 @@
 .media {
   display: flex;
   align-items: center;
-  margin-left: 20px;
+  padding-left: 20px;
+  width: fit-content;
 
   // display: grid;
   // grid-template-columns: 1fr 1fr;
@@ -16,6 +17,7 @@
 
   .icontact {
     display: flex;
+    // padding-right: 5px;
 
     //   // grid-area: b;
 
