--- a/styles/components/_Services.scss
+++ b/styles/components/_Services.scss
@@ -1,13 +1,17 @@
 .services-container {
+  margin-top: 20px;
+
   padding-top: 15px;
-  margin-top: 10px;
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 30px;
+
   background-color: $color-1;
   background-size: cover;
+
   .title {
     position: relative;
+
     .mot {
       color: $color-2;
       font-family: $font-1;
@@ -22,38 +26,71 @@
 
     h2 {
       font-family: $font-1;
-      font-size: 2rem;
+      font-size: 4rem;
       margin-top: 40px;
     }
-  }
 
-  .caption {
-    display: flex;
-    margin-top: 20px;
+    .caption {
+      display: flex;
+      margin-top: 20px;
 
-    hr {
-      border: none;
-      border-top: 2px solid #333;
-      width: 32px;
-      height: 5px;
-      margin-top: 7px;
-      margin-right: 20px;
+      hr {
+        border: none;
+        border-top: 2px solid #333;
+        width: 32px;
+        height: 5px;
+        margin-top: 7px;
+        margin-right: 20px;
+      }
+      .caption1 {
+        font-size: 1rem;
+        font-family: $font-2;
+        color: #4f4f4f;
+        width: 353px;
+      }
     }
-    .caption1 {
-      font-size: 1rem;
-      font-family: $font-2;
-      color: #4f4f4f;
-      width: 353px;
+    .cta {
+      position: relative;
+      margin-top: 20px;
+      left: 70%;
+      width: fit-content;
+      padding-right: 20px;
     }
-  }
-  .cta {
-    position: relative;
-    margin-top: 20px;
-    left: 70%;
   }
 
   .services {
+    padding-right: 10px;
     li {
+      list-style: none;
+      hr {
+        margin-top: 20px;
+        border: none;
+        border-top: 2px solid #9c9c9c;
+      }
+      .text {
+        display: flex;
+
+        justify-items: flex-start;
+        margin-top: 10px;
+        .number {
+          font-family: $font-2;
+          margin-right: 10px;
+          padding-top: 20px;
+        }
+        h3 {
+          font-family: $font-1;
+          font-size: 3rem;
+          line-height: 60px;
+        }
+      }
+      .more {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        p {
+          font-family: $font-2;
+        }
+      }
     }
   }
 }
