--- a/styles/components/_Herosection.scss
+++ b/styles/components/_Herosection.scss
@@ -80,6 +80,13 @@
       padding-right: 15px;
     }
   }
+
+  a:link {
+    text-decoration: none;
+    &visited {
+      text-decoration: none;
+    }
+  }
   button {
     margin-top: 40px;
     margin-left: 20px;
