--- a/styles/components/_Navbar.scss
+++ b/styles/components/_Navbar.scss
@@ -34,6 +34,15 @@
     }
   }
 
+  a:link {
+    text-decoration: none;
+    &visited {
+      text-decoration: none;
+    }
+    padding-top: 5px;
+    height: 100%;
+    padding-right: 5px;
+  }
   .btn {
     padding-right: 20px;
   }
