--- a/styles/components/_Skill.scss
+++ b/styles/components/_Skill.scss
@@ -118,19 +118,31 @@
         }
       }
     }
-  }
-  .img-button {
-    // background-image: url("/skill/background blue.svg");
-    // background-repeat: no-repeat;
-    // background-size: 30rem;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    left: 20%;
 
-    padding-left: 10px;
-    padding-top: 50px;
-    padding-right: 10px;
-    // position: center;
+    .container-img {
+      //display: flex;
+      // justify-content: center;
+      position: relative;
+      width: 300px;
+      left: 15%;
+
+      .img-button {
+        z-index: -3;
+        height: 190px;
+        position: relative;
+        .background {
+          position: absolute;
+        }
+
+        .foto {
+          position: absolute;
+          top: -35%;
+          left: -10%;
+          // float: left;
+          // position: relative;
+          // bottom: 50%;
+        }
+      }
+    }
   }
 }
