--- a/styles/components/_Projet.scss
+++ b/styles/components/_Projet.scss
@@ -2,6 +2,7 @@
   padding-left: 20px;
   padding-right: 20px;
   background-color: $color-1;
+  padding-top: 50px;
 
   .cta-top {
     position: relative;
@@ -9,9 +10,9 @@
     .button-cta {
       position: absolute;
 
-      left: 35%;
-      top: -50px;
-      //   transform: translateX(-50);
+      left: 34%;
+      top: -120px;
+      width: 200px;
     }
   }
 }
