--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,3 +7,7 @@
 @import "./components/Skill";
 @import "./components/Projet";
 @import "./components/Feedback";
+
+@import "swiper/scss";
+@import "swiper/scss/navigation";
+@import "swiper/scss/pagination";
