finish the footer

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,6 +7,7 @@
 @import "./components/Skill";
 @import "./components/Projet";
 @import "./components/Feedback";
+@import "./components/Footer";
 
 @import "swiper/scss";
 @import "swiper/scss/navigation";
