--- a/styles/components/_Skill.scss
+++ b/styles/components/_Skill.scss
@@ -65,6 +65,7 @@
           li {
             list-style: none;
             padding: 10px;
+            padding-bottom: 30px;
             width: 130px;
             .img {
               h3 {
@@ -102,6 +103,10 @@
             display: flex;
             flex-direction: column;
             padding-top: 20px;
+
+            .date {
+              font-family: $font-2;
+            }
             .name {
               h4 {
                 padding-top: 5px;
@@ -150,13 +155,13 @@
 
         .foto {
           position: relative;
-          bottom: -18px;
-          left: -8px;
+          bottom: -40px;
+          left: -1px;
 
           margin: 0;
           padding: 0;
           height: fit-content;
-          width: 230px;
+          width: 270px;
         }
       }
     }
