--- a/styles/components/_Footer.scss
+++ b/styles/components/_Footer.scss
@@ -111,3 +111,13 @@
     }
   }
 }
+
+@media screen and (min-width: 425px) {
+  .footer {
+    .container-footer {
+      .container-byen {
+        background-size: 70%;
+      }
+    }
+  }
+}
