--- a/styles/components/_Media.scss
+++ b/styles/components/_Media.scss
@@ -2,6 +2,8 @@
   display: flex;
   align-items: center;
   padding-left: 20px;
+  padding-right: 10px;
+  padding-top: 20px;
   width: fit-content;
 
   // display: grid;
@@ -24,6 +26,18 @@
     .rs {
       margin-left: 20px;
     }
+  }
+}
+
+@media screen and (min-width: 360px) {
+  .media {
+    padding-top: 0px;
+  }
+}
+
+@media screen and (min-width: 375px) {
+  .media {
+    padding-top: 0px;
   }
 }
 
