--- a/styles/components/_Skill.scss
+++ b/styles/components/_Skill.scss
@@ -19,7 +19,7 @@
     }
     h2 {
       font-family: $font-1;
-      font-size: 3.8rem;
+      font-size: 3.4rem;
       margin-top: 40px;
     }
     .caption {
@@ -189,5 +189,29 @@
     //     }
     //   }
     // }
+  }
+}
+
+@media screen and (min-width: 360px) {
+  .item-container {
+    width: auto;
+    ul {
+      justify-content: space-between;
+      li {
+        padding-left: 10px;
+        padding-right: 10px;
+        display: flex;
+        // align-content: center;
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 630px) {
+  .skill-exp .skill .item-skill .item-container ul {
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: row;
   }
 }
