--- a/styles/components/_Footer.scss
+++ b/styles/components/_Footer.scss
@@ -121,3 +121,19 @@
     }
   }
 }
+
+@media screen and (min-width: 768px) {
+  .footer .container-footer .container-intro .intro .mot {
+    left: 3px;
+  }
+
+  .footer .container-footer .container-byen {
+    background-size: 40%;
+  }
+}
+
+@media screen and (min-width: 912px) {
+  .footer .container-footer .container-byen {
+    background-size: 30%;
+  }
+}
