--- a/styles/components/_Footer.scss
+++ b/styles/components/_Footer.scss
@@ -195,3 +195,10 @@
 .footer .container-footer .container-intro .intro .mot {
   top: -25px;
 }
+
+@media screen and (min-width: 1440px) {
+  .footer .container-footer .container-byen {
+    height: 580px;
+    background-size: 82%;
+  }
+}
