--- a/styles/components/_Projet.scss
+++ b/styles/components/_Projet.scss
@@ -145,3 +145,13 @@
     }
   }
 }
+
+@media screen and (min-width: 1440px) {
+  .projet {
+    padding-left: 60px;
+  }
+
+  .projet .container-projet ul li {
+    width: 370px;
+  }
+}
