--- a/styles/components/_Navbar.scss
+++ b/styles/components/_Navbar.scss
@@ -31,6 +31,8 @@
       font-size: 20px;
       font-family: $font-1;
       line-height: 20px;
+      padding-left: 5px;
+      font-weight: 600;
     }
   }
 
